# multiplayer_fps

./: Cargo.toml  README.md  client.sh  install.sh  server.sh
assets/models/: armor.glb  bfg.glb  bfg2.glb  doomguy&shotgun.blend  doomguy&shotgun.blend1  doomguy&shotgun.blend11  gun.glb  gun2.glb  minigun.glb  rocket.glb  shotgun3.mtl  sky.glb  sky2.glb
assets/models/Textures/: supershotgun_chain_a_col.tga  supershotgun_chain_a_mask.tga  supershotgun_chain_a_nml.tga
src/: install.sh  lib.rs
src/client/: events.rs  main.rs  resources.rs  systems.rs
src/client/game/: game.rs
src/client/game/level/: level.rs  targets.rs
src/client/game/player/: camera_controller.rs  input.rs  mod.rs  player.rs  player_movement.rs  player_shooting.rs  weapon.rs
src/client/game/shooting/: tracer.rs
src/client/game/ui/: crosshair.rs  hud.rs  map.rs  mod.rs  ui.rs
src/client/game/window/: window.rs
src/server/: main.rs  resources.rs  systems.rs
