[package]
name = "multiplayer-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy_rapier3d = "0.27.0"
bevy_renet = { version = "0.0.12", features = ["serde"] }
bincode = "1.3.3"
rand = "0.8.5"
renet = "0.0.16"
serde = "1.0.203"
local-ip-address = "0.5"

[profile.dev]
opt-level = 1

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"