# Configuration du package Rust pour le projet de jeu multijoueur FPS
[package]
name = "multiplayer-demo"  # Nom du package
version = "0.1.0"          # Version du projet
edition = "2021"           # Version de Rust utilisée

# Dépendances externes nécessaires au projet
[dependencies]
# Moteur de jeu principal - Bevy avec support du linking dynamique pour les performances
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
# Plugin audio pour Bevy - gestion des sons et musiques
bevy_audio = "0.16.1"
# Plugin de physique 3D pour Bevy - collisions, gravité, etc.
bevy_rapier3d = "0.27.0"
# Plugin réseau pour Bevy - gestion des communications client/serveur
bevy_renet = { version = "0.0.12", features = ["serde"] }
# Bibliothèque de sérialisation binaire - pour les messages réseau
bincode = "1.3.3"
# Bibliothèque de génération de nombres aléatoires
rand = "0.8.5"
# Bibliothèque réseau de base - transport UDP/TCP
renet = "0.0.16"
# Framework de sérialisation/désérialisation - pour les structures de données
serde = "1.0.203"
# Bibliothèque pour récupérer l'adresse IP locale
local-ip-address = "0.5"

# Configuration du profil de développement
# Optimisation de niveau 1 pour améliorer les performances en développement
[profile.dev]
opt-level = 1

# Configuration des binaires exécutables
# Binaire serveur - point d'entrée pour le serveur de jeu
[[bin]]
name = "server"
path = "src/server/main.rs"

# Binaire client - point d'entrée pour le client de jeu
[[bin]]
name = "client"
path = "src/client/main.rs"